--- a/react-task/src/index.html
+++ b/react-task/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="app"></div>
     <div id="root"></div>
     <script src="bundle.js"></script>
     <h1>Результат</h1>
