--- a/react-task/src/index.html
+++ b/react-task/src/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Vadim</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="app"></div>
-    <div id="root"></div>
+    <!-- <div id="root"></div> -->
     <script src="bundle.js"></script>
-    <h1>Результат</h1>
-</body>
-
+  </body>
 </html>
